# itgrowdivision_tasks

./: .gitignore  README.md  pyproject.toml  requirements.txt
google_translate_cli/: README.md  translate.py
mnist_nn/: README.md  data_prep.py  mnist_cnn_model_state.pth  model.py  test.py  train.py
social_network_crud_sql/: README.md  database.py  social_network.db  test.py  user_crud.py
